# nitrokey-dmenu

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: main.rs
