[package]
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]
name = "nitrokey-dmenu"
version = "0.2.1"
edition = "2021"
description = "Quickly fetch passwords from your nitrokey"
readme = "./README.md"
repository = "https://github.com/rbartlensky/nitrokey-dmenu"
license = "GPL-3.0"
keywords = ["nitrokey", "dmenu"]

[dependencies]
anyhow = "1"
copypasta = "0.8"
nitrokey = "0.9"
pinentry = "0.5"
secrecy = "0.8"
